# hht_project_public

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_aarch64.sh  build_x86_64.sh  gnu-cmake-toolchain.cmake  update.txt
config/dds_config/: USER_QOS_PROFILES.xml
include/: DDSservice.h  timer.h
include/common/: status.h
include/common/util/: Singleton.hpp  ini_config.h
message/proto/: robot.grpc.pb.cc  robot.grpc.pb.h  robot.pb.cc  robot.pb.h  robot.proto
message/test/: data_test.cxx  data_test.hpp  data_test.idl  data_testPlugin.cxx  data_testPlugin.hpp  pubsub.cxx  pubsub.hpp  pubsubPlugin.cxx  pubsubPlugin.hpp  rpc_door_control.cxx  rpc_door_control.hpp  rpc_door_control.idl  rpc_door_controlPlugin.cxx  rpc_door_controlPlugin.hpp  rpc_msg.cxx  rpc_msg.hpp  rpc_msg.idl  rpc_msgPlugin.cxx  rpc_msgPlugin.hpp
message/vehicle/: vehicle_door.cxx  vehicle_door.hpp  vehicle_door.idl  vehicle_doorPlugin.cxx  vehicle_doorPlugin.hpp
modules/: CMakeLists.txt
modules/async_asio_comm/: CMakeLists.txt  update.txt
modules/async_asio_comm/async_client/: CMakeLists.txt  async_client.cpp  async_client.hpp  cclient_concurrency_test.cpp  cclient_demo.cpp  cclient_packet_coalescing_test.cpp
modules/async_asio_comm/async_tcp_server/: CMakeLists.txt  cserver_demo.cpp
modules/async_asio_comm/async_tcp_server/include/: CServer.hpp  CSession.hpp  IOServicePool.hpp  IOThreadPool.hpp  LogicSystem.hpp  MsgNode.hpp  common.h  version.h
modules/async_asio_comm/async_tcp_server/src/: CServer.cpp  CSession.cpp  IOServicePool.cpp  IOThreadPool.cpp  LogicSystem.cpp
modules/async_asio_comm/include/: macro.h  object_pool.hpp
modules/hht_dds/: CMakeLists.txt
modules/hht_dds/app/: CMakeLists.txt  app_pub.cpp  app_reply.cpp  app_request.cpp  app_sub.cpp
modules/hht_dds/include/: DDS_comm.h  DDS_waitset.h
modules/hht_iox/: CMakeLists.txt
modules/hht_iox/include/: iox_interface.h  iox_shm_impl.h  iox_shm_interface.h  iox_soa_interface.h
modules/hht_iox/test/: client_cxx_basic.cpp  server_cxx_basic.cpp  server_cxx_basic2.cpp  test_publisher.cpp  test_subscriber.cpp  topic_data.hpp
modules/hht_iox_clib/: CMakeLists.txt  iceoryx_wrapper.cpp  iceoryx_wrapper.h  test_a.c  test_b.cpp  test_hht_iox_pub.cpp  test_hht_iox_wait.cpp  topic_data.hpp
modules/tbb/: 1.cpp  CMakeLists.txt
modules/testIMPL/: CMakeLists.txt
modules/testIMPL/include/: bookinterface.h
modules/testIMPL/src/: bookimpl.cpp
modules/testIMPL/test/: CMakeLists.txt  bookinterface.h  main.cpp
modules/throughput_test/: CMakeLists.txt  test.cpp
modules/throughput_test/replier/: proc_replier.cpp  replier_main.cpp
modules/throughput_test/requester/: proc_requester.cpp  requester_main.cpp
