if(USE_CC_AARCH64)
    message(STATUS "All binary files' OUTPUT DIRECTORY: ${MASTER_ROOT}/bin_aarch64")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin_aarch64/nodes)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin_aarch64/nodes)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin_aarch64/nodes)
else()
    message(STATUS "All binary files' OUTPUT DIRECTORY: ${MASTER_ROOT}/bin")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin/nodes)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin/nodes)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MASTER_ROOT}/bin/nodes)
endif()

add_subdirectory(async_asio_comm)
# add_subdirectory(hht_dds)
# add_subdirectory(hht_iox)
# add_subdirectory(hht_iox_clib)
# add_subdirectory(tbb)
# add_subdirectory(testIMPL)
# add_subdirectory(throughput_test)

